--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+server.port=9000
+spring.devtools.restart.quiet-period=1000
+spring.devtools.restart.poll-interval=2000
+server.servlet.context-path=/workintech
 
